fix: FE EmailClient preventClickBG z-index

--- a/frontend/src/components/EmailClient/EmailClient.css
+++ b/frontend/src/components/EmailClient/EmailClient.css
@@ -243,6 +243,6 @@
     width: 100%;
     height: 100%;
     backdrop-filter: blur(10px);
-    z-index: 500;
+    z-index: 100;
     transition: all .15s ease-in-out;
 }
